kubernetes/coming-soon.yaml
apiVersion: v1
kind: Service
metadata:
  name: coming-soon
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: coming-soon
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coming-soon
  labels:
    app: coming-soon
spec:
  replicas: 1
  selector:
    matchLabels:
      name: coming-soon
  template:
    metadata:
      labels:
        name: coming-soon
    spec:
      containers:
        - name: coming-soon
          image: iamr0b0tx/coming-soon:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: myregistrykey
